file-chooser: fixe style & add scrollbar

--- a/www/css/layers.css
+++ b/www/css/layers.css
@@ -1,11 +1,27 @@
 #dialog-file-chooser-content{
-  margin-top: 2vh;
+  word-break: break-all;
   max-height: 70vh;
   max-width: 60vh;
-  overflow: scroll;
+  overflow: auto;
   display: -webkit-box;
   -webkit-line-clamp: 3;
   -webkit-box-orient: vertical;
+}
+
+#dialog-file-chooser-content::-webkit-scrollbar {
+    display: block !important;
+    width: 5px;
+    height: 0px;
+}
+
+#dialog-file-chooser-content::-webkit-scrollbar-track {
+    background: rgba(0,0,0,0.1);
+}
+
+#dialog-file-chooser-content::-webkit-scrollbar-thumb {
+    border-radius: 2px;
+    background: rgba(0,0,0,0.3);
+    -webkit-box-shadow: inset 0 0 3px rgba(0,0,0,0.5); 
 }
 
 #dialog-comparison-KML-content{
